--- a/index.html
+++ b/index.html
@@ -10,6 +10,42 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-
+  <main>
+    <h1 class="pad-top-half gutter-half push-half">Prehistoric mammals</h1>
+    <ol class="grid grid-stretch gutter-quarter pad-top-quarter">
+      <li class="unit unit-content-distribute unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-quarter push">
+        <div class="island-half content-fill unit-content-distribute card">
+          <img class="img-flex push-half" src="images/arsinoitherium.jpg" alt="Arsinoitherium">
+          <h2 class="push-half giga">Arsinoitherium</h2>
+          <p class="push-half kilo">Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lived in northern Africa from 36 to 30 million years ago.</p>
+          <a class="mega" href="https://en.wikipedia.org/wiki/Arsinoitherium">Learn more about Arsinoitherium</a>
+        </div>
+      </li>
+      <li class="unit unit-content-distribute unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-quarter push">
+        <div class="island-half content-fill unit-content-distribute card">
+          <img class="img-flex push-half" src="images/elasmotherium.jpg" alt="Elasmotherium">
+          <h2 class="push-half giga">Elasmotherium</h2>
+          <p class="push-half kilo">Elasmotherium, also known as the Giant Siberian Unicorn, is an extinct genus of rhinoceros endemic to Eurasia during the Late Pliocene through the Pleistocene.</p>
+          <a class="mega" href="https://en.wikipedia.org/wiki/Elasmotherium">Learn more about Elasmotherium</a>
+        </div>
+      </li>
+      <li class="unit unit-content-distribute unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-quarter push">
+        <div class="island-half content-fill unit-content-distribute card">
+          <img class="img-flex push-half" src="images/glyptodon.jpg" alt="Glyptodon">
+          <h2 class="push-half giga">Glyptodon</h2>
+          <p class="push-half kilo">Glyptodon was a large, armored mammal, a relative of armadillos that lived during the Pleistocene epoch.</p>
+          <a class="mega" href="https://en.wikipedia.org/wiki/Glyptodon">Learn more about Glyptodon</a>
+        </div>
+      </li>
+      <li class="unit unit-content-distribute unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-quarter push">
+        <div class="island-half content-fill unit-content-distribute card">
+          <img class="img-flex push-half" src="images/megatherium.jpg" alt="Megatherium">
+          <h2 class="push-half giga">Megatherium</h2>
+          <p class="push-half kilo">Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
+          <a class="mega" href="https://en.wikipedia.org/wiki/Megatherium">Learn more about Megatherium</a>
+        </div>
+      </li>
+    </ol>
+  </main>
 </body>
 </html>
